# SharedMemoryCache

./: .clang-format  CMakeLists.txt  README.md
cfg/: cache.conf
src/: common_define.h  common_types.cpp  common_types.h  shm_allocator.cpp  shm_allocator.h  shm_cache.cpp  shm_cache.h  shm_configure.cpp  shm_configure.h  shm_hashtable.cpp  shm_hashtable.h  shm_lock.cpp  shm_lock.h  shm_memory.cpp  shm_memory.h  shm_serialization.cpp  shm_serialization.h
src/mem/: memcpy_avx.h  memcpy_folly.S
test/: bardoom.cpp  hornet.cpp
